--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "telegraf": "^4.16.3",
+    "uuid": "^11.0.3",
     "winston": "^3.13.0"
   }
 }
